# Rattrapage_R-type

./: .gitignore  CMakeLists.txt  Readme.md  r_type.sh
.github/workflows/: build.yml
Documentation-R-TYPE/R-TYPE/: mkdocs.yml
Documentation-R-TYPE/R-TYPE/docs/: documentation.md  ecs.md  index.md  lib.md  network.md  protocol.md  server.md
ecs/: main_ecs_test.cpp
ecs/Component/: AComponent.cpp  AComponent.hpp  AiCMPT.cpp  AiCMPT.hpp  AnimationComponent.hpp  DamageCMPT.cpp  DamageCMPT.hpp  FireRateCMPT.cpp  FireRateCMPT.hpp  HealthCMPT.cpp  HealthCMPT.hpp  IComponent.hpp  InputComponent.hpp  ItBox.cpp  ItBox.hpp  LifetimeCMPT.cpp  LifetimeCMPT.hpp  ParallaxComponent.hpp  PositionCMPT.cpp  PositionCMPT.hpp  ProjectileComponent.hpp  ScoreCMPT.hpp  SpawnerComponent.cpp  SpawnerComponent.hpp  SpriteCMPT.cpp  SpriteCMPT.hpp  VelocityCMPT.cpp  VelocityCMPT.hpp  WeaponComponent.hpp
ecs/Entity/: Entity.cpp  Entity.hpp  EntityFactory.cpp  EntityFactory.hpp  EntityID.hpp
ecs/Systems/: ISystem.hpp
ecs/Systems/AnimationSystem/: AnimationSystem.cpp  AnimationSystem.hpp
ecs/Systems/CollisionSystem/: CollisionSystem.cpp  CollisionSystem.hpp
ecs/Systems/InputSystem/: InputSystem.cpp  InputSystem.hpp
ecs/Systems/LifetimeSystem/: LifetimeSystem.hpp
ecs/Systems/MovementSystem/: MovementSystem.cpp  MovementSystem.hpp
ecs/Systems/ParallaxSystem/: ParallaxSystem.hpp
ecs/Systems/RendererSystem/: RendererSystem.cpp  RendererSystem.hpp  TextureManager.hpp
ecs/Systems/SpawnSystem/: SpawnSystem.cpp  SpawnSystem.hpp
ecs/Systems/WeaponSystem/: WeaponSystem.cpp  WeaponSystem.hpp
ecs/World/: World.cpp  World.hpp
src/: main_client.cpp  main_server.cpp
src/Graphics/: Game.cpp  Game.hpp  InitialisedWorld.cpp  InitialisedWorld.hpp
src/Graphics/Menu/: Menu.cpp  Menu.hpp  MenuPacketHandler.cpp
src/Graphics/SoundManager/: SoundManager.hpp
src/Network/: Client.cpp  Client.hpp  Server.cpp  Server.hpp  common.hpp
src/Server/: Data.cpp  Data.hpp  GameServer.cpp  GameServer.hpp  Room.hpp  ServerPacketHandler.cpp
